# ReactComponentViewer

./: .gitignore  README.md  pyproject.toml
ReactComponentViewer/: .pylintrc  AddComponentScreen.py  ComponentsScreen.py  LoginScreen.py  app.py  database.db  database.py  pyproject.toml  react_build.html  requirements.txt  schema.sql  tasks.py  test.db
ReactComponentViewer/HTML/: .gitignore  react_build.html
ReactComponentViewer/UI/: AddComponentScreen.py  ComponentsScreen.py  LoginScreen.py
ReactComponentViewer/Util/: User.py
ReactComponentViewer/src/: AddComponentScreen.py  ComponentsScreen.py  LoginScreen.py  app.py  database.db  database.py  index.py  pyproject.toml  react_build.html  schema.sql  tasks.py
ReactComponentViewer/src/HTML/: .gitignore
ReactComponentViewer/src/tests/: database_test.py  rcv_test.py  user_test.py  util_test.py
ReactComponentViewer/src/ui/: add_component_screen.py  components_screen.py  login_screen.py  react_build.html
ReactComponentViewer/src/util/: user.py  utilities.py
ReactComponentViewer/tests/: rcv_test.py
documentation/: architecture.md  changelog.md  gitlog.txt  instructions.md  testing.md  timetable.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoly.md  motor.md
viikko1/: komentorivi.txt
viikko2/: vaatimusmaarittely.md
viikko2/maksukortti/: pyproject.toml
