[tool.poetry]
name = "webview"
version = "0.1.0"
description = ""
authors = ["ni-eminen <matiasnie2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tk = "^0.1.0"
pywebview = "^3.6.2"
QtPy = "^2.0.1"
PyQt5 = "^5.15.6"
requests = "^2.27.1"
Pygments = "^2.11.2"
idle = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
