[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ni-eminen <matiasnie2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.34"
invoke = "^1.7.0"
pytest = "^7.1.1"
requests = "^2.27.1"
bcrypt = "^3.2.0"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
