[tool.poetry]
name = "reactcomponentviewer"
version = "0.1.0"
description = ""
authors = ["ni-eminen <matiasnie2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pywebview = "^3.6.2"
invoke = "^1.7.0"
pytest = "^7.1.1"
pep8 = "^1.7.1"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
