[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ni-eminen <matiasnie2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^3.2.0"
pywebview = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
